--- a/html_Implementation_Difficult.html
+++ b/html_Implementation_Difficult.html
@@ -76,7 +76,7 @@
     <tr><td style="font-size: 20px; ">
         <b>Name:-</b><input type="text" name="name" required></td></tr>
     <tr><td style="font-size: 20px; ">
-        <b>Age:-</b><input type="month" name="age" required></td></tr>
+        <b>Age:-</b><input type="number" name="age" required></td></tr>
     <tr><td style="font-size: 20px; ">
         <b>Email:-</b><input type="email" name="email" required="@gmail.com"></td></tr>
     <tr><td style="font-size: 20px; ">
